# srt-router

./: .gitignore  README.md  README.zh.md  architecture.en.md  architecture.zh.md  build_srtrouter.bat  build_srtrouter.sh
3rd/boost/: CMakeLists.txt  asio.hpp  convert.hpp  stacktrace.hpp  throw_exception.hpp  version.hpp
3rd/boost/algorithm/: clamp.hpp  hex.hpp
3rd/boost/algorithm/cxx11/: is_sorted.hpp
3rd/boost/asio/: any_io_executor.hpp  associated_allocator.hpp  associated_cancellation_slot.hpp  associated_executor.hpp  basic_datagram_socket.hpp  basic_deadline_timer.hpp  basic_file.hpp  basic_random_access_file.hpp  basic_raw_socket.hpp  basic_readable_pipe.hpp  basic_seq_packet_socket.hpp  basic_serial_port.hpp  basic_signal_set.hpp  basic_socket.hpp  basic_socket_acceptor.hpp  basic_stream_file.hpp  basic_stream_socket.hpp  basic_waitable_timer.hpp  basic_writable_pipe.hpp  bind_allocator.hpp  bind_cancellation_slot.hpp  bind_executor.hpp  compose.hpp  defer.hpp  dispatch.hpp  executor_work_guard.hpp  io_context.hpp  post.hpp  spawn.hpp  strand.hpp  system_executor.hpp  thread_pool.hpp  version.hpp
3rd/boost/asio/detail/: bind_handler.hpp  config.hpp  handler_alloc_helpers.hpp  handler_work.hpp  memory.hpp  utility.hpp  work_dispatcher.hpp
3rd/boost/asio/detail/impl/: descriptor_ops.ipp  handler_tracking.ipp  select_reactor.ipp  socket_ops.ipp  strand_executor_service.hpp  win_iocp_handle_service.ipp
3rd/boost/asio/execution/: allocator.hpp  any_executor.hpp  blocking.hpp  blocking_adaptation.hpp  bulk_execute.hpp  bulk_guarantee.hpp  connect.hpp  context.hpp  context_as.hpp  execute.hpp  executor.hpp  mapping.hpp  occupancy.hpp  operation_state.hpp  outstanding_work.hpp  receiver.hpp  relationship.hpp  schedule.hpp  scheduler.hpp  sender.hpp  set_done.hpp  set_error.hpp  set_value.hpp  start.hpp  submit.hpp
3rd/boost/asio/execution/detail/: as_operation.hpp
3rd/boost/asio/experimental/: basic_channel.hpp  basic_concurrent_channel.hpp  channel_traits.hpp  coro.hpp  parallel_group.hpp  promise.hpp  use_coro.hpp
3rd/boost/asio/experimental/detail/: channel_handler.hpp  channel_operation.hpp  channel_service.hpp  completion_handler_erasure.hpp  partial_promise.hpp  (+1 more)
3rd/boost/asio/impl/: any_io_executor.ipp  append.hpp  as_tuple.hpp  buffered_read_stream.hpp  buffered_write_stream.hpp  co_spawn.hpp  compose.hpp  connect.hpp  defer.hpp  deferred.hpp  dispatch.hpp  handler_alloc_hook.ipp  post.hpp  prepend.hpp  read.hpp  read_at.hpp  read_until.hpp  redirect_error.hpp  spawn.hpp  src.hpp  use_future.hpp  write.hpp  write_at.hpp
3rd/boost/asio/posix/: basic_descriptor.hpp  basic_stream_descriptor.hpp
3rd/boost/asio/windows/: basic_object_handle.hpp  basic_overlapped_handle.hpp  basic_random_access_handle.hpp  basic_stream_handle.hpp
3rd/boost/beast/: version.hpp
3rd/boost/beast/websocket/: stream.hpp
3rd/boost/bind/: bind.hpp
3rd/boost/chrono/: duration.hpp
3rd/boost/chrono/io/: duration_io.hpp  time_point_io.hpp
3rd/boost/config/detail/: suffix.hpp
3rd/boost/config/stdlib/: libcpp.hpp  libstdcpp3.hpp
3rd/boost/container/: allocator.hpp  devector.hpp  options.hpp  stable_vector.hpp  string.hpp  vector.hpp
3rd/boost/container/detail/: advanced_insert_int.hpp  copy_move_algo.hpp  destroyers.hpp  flat_tree.hpp  iterator.hpp  workaround.hpp
3rd/boost/core/: bit.hpp
3rd/boost/core/detail/: string_view.hpp
3rd/boost/date_time/: gregorian_calendar.ipp
3rd/boost/filesystem/: directory.hpp  file_status.hpp  operations.hpp  path.hpp  path_traits.hpp  string_file.hpp
3rd/boost/filesystem/detail/: header.hpp
3rd/boost/intrusive/: avltree_algorithms.hpp  bstree_algorithms.hpp  hashtable.hpp  rbtree_algorithms.hpp  sgtree_algorithms.hpp  splaytree_algorithms.hpp  treap_algorithms.hpp
3rd/boost/intrusive/detail/: any_node_and_algorithms.hpp  bstree_algorithms_base.hpp  iterator.hpp  workaround.hpp
3rd/boost/iterator/: function_input_iterator.hpp
3rd/boost/lib/win/: libboost_atomic-vc142-mt-s-x64-1_80.lib  libboost_atomic-vc142-mt-sgd-x64-1_80.lib  libboost_chrono-vc142-mt-s-x64-1_80.lib  libboost_chrono-vc142-mt-sgd-x64-1_80.lib  libboost_date_time-vc142-mt-s-x64-1_80.lib  libboost_date_time-vc142-mt-sgd-x64-1_80.lib  libboost_filesystem-vc142-mt-s-x64-1_80.lib  libboost_random-vc142-mt-s-x64-1_80.lib  libboost_random-vc142-mt-sgd-x64-1_80.lib  libboost_regex-vc142-mt-s-x64-1_80.lib  libboost_system-vc142-mt-s-x64-1_80.lib  libboost_system-vc142-mt-sgd-x64-1_80.lib  libboost_thread-vc142-mt-s-x64-1_80.lib  libboost_thread-vc142-mt-sgd-x64-1_80.lib
3rd/boost/move/detail/: type_traits.hpp
3rd/boost/mp11/: version.hpp
3rd/boost/multi_index/: composite_key.hpp
3rd/boost/system/: result.hpp
3rd/boost/system/detail/: config.hpp  error_category.hpp  error_category_impl.hpp  error_code.hpp  error_condition.hpp  system_category_message_win32.hpp
3rd/boost/type_traits/: intrinsics.hpp
3rd/boost/variant/: variant.hpp
3rd/boost/variant2/: variant.hpp
3rd/libjson/: CMakeLists.txt
3rd/libjson/src/: json_reader.cpp  json_value.cpp  json_writer.cpp
3rd/openssl/: CMakeLists.txt
3rd/openssl/include/openssl/: opensslconf.h
3rd/openssl/lib/linux/: libcrypto.so.1.1  libssl.so.1.1  ssltest
3rd/openssl/lib/win/: libcrypto.lib  libssl.lib
3rd/srt-1.5.4/: CMakeLists.txt
3rd/srt-1.5.4/include/srt/: access_control.h  logging_api.h  platform_sys.h  srt.h  udt.h  version.h
3rd/srt-1.5.4/lib/linux/: libsrt.so.1.5.4
3rd/srt-1.5.4/lib/win/: srt.lib
SrtRouter/: CMakeLists.txt  CreateMakefile.sh  CreateVSProj.bat  configure.cpp  configure.h  logger.cpp  logger.h  main.cpp  srtRouter.cpp  srtRouter.h  srtrouter.readme.md  srtrouterconfig.json  util.cpp  util.h  version.properties
lib/libcommon/: CMakeLists.txt  SrtReceive.cpp  SrtReceive.h  SrtSocket.cpp  SrtSocket.h  simplelogging.cpp  simplelogging.h  srtSettings.h  stringutils.h
lib/libwebserver/: CMakeLists.txt
lib/libwebserver/include/: libwebserver.h  webserverinterface.h
lib/libwebserver/src/: libwebserver.cpp  libwebserver.sln  webserverbeastimpl.cpp  webserverbeastimpl.h
(+201 files in other folders)
